package model;

public enum Position {
    MANUAL_WORKER,
    MEDIC,
    MANAGER
}
